<resources>
    <string name="app_name">MudrakPatel_Comp304Lab2</string>
    <string name="enterBtnText">Enter</string>
    <string name="americanCuisineRBtn">American</string>
    <string name="italianCuisineRBtn">Italian</string>
    <string name="chineseCuisineRBtn">Chinese</string>
    <string name="indianCuisineRBtn">Indian</string>
    <string name="backText">Back</string>
    <string name="nextText">Next</string>
    <string name="title_activity_basic">Basic</string>
    <string name="title_activity_restaurants">RestaurantsActivity</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="nameHint">Name</string>
    <string name="addressEditText">Address</string>
    <string name="creditCardNumberText">Credit Card Number</string>
    <string name="favouriteItemString">Favourite Item</string>
    <string name="favouriteCuisineEditText">Favourite cuisine</string>
    <string name="orderListTextView"><u>Your order:</u></string>
</resources>
